[FIX] web_editor: fix infinite flicker on option button hover
Bootstrap tooltips are overlapping the parent box, it could cause an
infinite flicker in the web editor because the pointer goes over the
tooltip, disabling the tooltip, refocusing the parent, enabling the
tooltip, etc.

Since commit [1], the tooltips are centered differently, making this
worst because of a bigger overlap.

Steps to reproduce:
- drop a "Text" block
- select it
- hover the bottom border of the "50%" Height option
--> The tooltip flickers infinitely, along with the blue overlay on the
editor.

This commit fixes it by disabling the pointer events of the tooltip.

[1]: https://github.com/odoo/odoo/commit/09b720eff1a7

task-3299236

closes odoo/odoo#121013

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -299,6 +299,10 @@
         }
     }
 
+    .tooltip {
+        pointer-events: none !important;
+    }
+
     // Snippet filter input
     .o_snippet_search_filter {
         position: relative;
